# MahjongAI-

./: .gitattributes  .gitignore  .gitnexusignore  0_three_mode_e2e.bat  1_relay_hotspot.bat  2_relay_vpn.bat  3_relay_noconfig.bat  4_relay_all.bat  5_extractor_hotspot.bat  6_extractor_vpn_ecs.bat  AGENTS.md  CLAUDE.md  DEPLOY_MITM.md  Dockerfile  _login_view.txt  architecture.md  backfill_session_db.py  bootstrap_remote_config.py  build.bat  ca.crt  captive_portal.py  check_log.py  debug_recognition.py  deploy_ecs.sh  deploy_ecs_local.bat  deploy_ecs_proxy.bat  deploy_mitm.bat  deploy_to_ecs.py  diag_ecs.bat  diag_ecs.sh  diag_hotspot.py  diagnose_region.py  diagnose_remote.py  docker-compose.yml  e2e_test.py  ecs-update.tar  enable_hotspot.ps1  extract_frames_debug.py  extract_templates.py  extract_templates_final.py  (+28 more)
game/: guard.py  (+24 more)
interface/: README.md  pyproject.toml
interface/build_rebuild/mahjong_mitm_win/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-mahjong_mitm_win.txt  (+1 more)
interface/mahjong_mitm/: __init__.py  __main__.py  manifest_forge.py  netconf_patch.py  setup_mitm.py
interface/openwrt/: Makefile  build_ipk.py  build_ipk.sh  postinst
interface/pc-dev/: run_pc.py
interface/tests/: test_netconf_patch.py  test_setup_mitm_hardening.py  test_setup_mitm_manifest_mode.py  test_watchdog_fault_injection.py  test_win_admin.py  test_win_dns_divert.py  test_win_task.py
interface/windows/: __init__.py  __main__.py  config.py  core.py  tray_app.py  win_task.py
interface/winpack/: build_win.bat  mahjong_mitm_win.spec  tray_entry.py
(+740 files in other folders)
